--- a/UI/package.json
+++ b/UI/package.json
@@ -14,7 +14,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "web3": "^4.12.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
