--- a/UI/package.json
+++ b/UI/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "dom": "^0.0.3",
+    "ethers": "^6.13.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
