--- a/UI/package.json
+++ b/UI/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "dom": "^0.0.3",
     "ethers": "^6.13.2",
     "react": "^18.3.1",
