--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hardhat",
+  "name": "random2",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,5 +11,8 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "hardhat": "^2.22.11"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
